Make a single prediction

--- a/PredictDisease_ConsoleApp1/PredictDisease_ConsoleApp1.csproj
+++ b/PredictDisease_ConsoleApp1/PredictDisease_ConsoleApp1.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
@@ -16,14 +16,6 @@
     </None>
     <None Include="PredictDisease.zip">
       <DependentUpon>PredictDisease.mbconfig</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="Data\column_2C.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Data\column_3C.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
