--- a/MlClassification/MlClassification.csproj
+++ b/MlClassification/MlClassification.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,23 +7,16 @@
     <PackageReference Include="Microsoft.ML" Version="4.0.3" />
     <PackageReference Include="Microsoft.ML.FastTree" Version="4.0.3" />
   </ItemGroup>
-  <ItemGroup Label="PredictDisease">
-    <None Include="PredictDisease.consumption.cs">
-      <DependentUpon>PredictDisease.mbconfig</DependentUpon>
-    </None>
-    <None Include="PredictDisease.training.cs">
-      <DependentUpon>PredictDisease.mbconfig</DependentUpon>
-    </None>
-    <None Include="PredictDisease.zip">
-      <DependentUpon>PredictDisease.mbconfig</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
   <ItemGroup>
     <None Update="Data\column_2C.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Data\column_3C.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup Label="PredictDisease">
+    <None Include="PredictDisease.mlnet">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
